# WaveMAP_Paper

./: .WaveMAP_Figures_Data.ipynb.icloud  Figure_1.mlx  LICENSE  README.md  STAR_Protocol.ipynb  STAR_Protocol_Testing (1).ipynb  STAR_Protocol_Testing.ipynb  WaveMAP_Example.ipynb  WaveMAP_Figures_Data.ipynb  __init__.py  full_data.npy  pyproject.toml  requirements.txt
.circleci/: config.yml
Fig1_DataAndCode/: AxisMMC.m  Fig1_MonkeyO_data.mat  Fig1_MonkeyT_data.mat  figure1.m  getAxesP.m  plotPsychAndChrono.m
Notebooks/: STAR_Protocol_Testing.ipynb
WaveMAP-Paper/: helper_functions.py
WaveMAP_Paper/: helper_functions.py
data/: 8_class_GMM.mat  AMI_aggregates.pkl  AMI_means.pkl  AMI_sems.pkl  BIC_list.mat  BIC_means.pkl  BIC_stds.pkl  allChansUprobe.mat  cleanedWaveforms.mat  clust_rand_dict.pkl  decisionDynamics.mat  discrimination_times.pkl  filt_full_df.pkl  full_data  full_data_df.pkl  gmm_features.mat  gmm_gapstat.mat  gmm_gapstat_SE.mat  gmm_scores.pkl  masterArray.mat  modularity_dict.pkl  mutual_info_stability.pkl  n_clusts_dict.pkl  renorm_subset_avg_rand_list.pkl  renorm_subset_std_rand_list.pkl  subset_avg_rand_list.pkl  subset_std_rand_list.pkl  tSNE_AMI_aggregates.pkl  tSNE_AMI_means.pkl  tSNE_AMI_sems.pkl  trough_normalizedWaveforms.npy  uprobeMask.mat  waveformsClassified_250hz_refiltered.mat  wavemap_n_neigbors_scores.pkl  wavemap_scores.pkl
data/FR_stats/: GMM_baseline_FR_df.pkl  GMM_max_FR_df.pkl  baseline_FR_df.pkl  max_FR_df.pkl
data/FR_traces/: GMM_non_pref_1.pkl  GMM_nonpref_2.pkl  GMM_nonpref_3.pkl  GMM_nonpref_bounds_3.pkl  nonpref_5.pkl  (+27 more)
(+76 files in other folders)
